--- a/css/styles.css
+++ b/css/styles.css
@@ -145,3 +145,19 @@ li {
     background-color: #1681ba;
     color: #ffffff
 }
+#map {
+    margin: 200px 100px 0;
+}
+.marcador {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.marcador h3 {
+    color: #333333;
+    font-size: 1rem;
+}
+.marcador img {
+    max-width: 200px;
+    Object-fit: cover;
+}
