--- a/css/styles.css
+++ b/css/styles.css
@@ -94,13 +94,6 @@ a:hover {
     background-color: #8C8C8C;
 }
 
-/* Mapa */
-#map {
-    width: 1200px;
-    height: 720px;
-    border-radius: 5px;
-}
-
 /* Formulario de registro */
 form {
     display: flex;
@@ -151,8 +144,13 @@ li {
     background-color: #1681ba;
     color: #ffffff
 }
-#map {
-    margin: 200px 100px 0;
+.articleMap {
+    margin: 100px 100px 0;
+}
+#map{
+    width: 80vw;
+    height: 80vh;
+    border-radius: 20px;
 }
 .marcador {
     display: flex;
@@ -162,6 +160,12 @@ li {
 .marcador h3 {
     color: #333333;
     font-size: 1rem;
+}
+.clickImage {
+    background-color: transparent;
+}
+.clickImage:hover {
+    background-color: transparent;
 }
 .marcador img {
     max-width: 200px;
